# python-libimobiledevice

./: .gitignore  Pipfile  README.md  pyproject.toml
libibackup/: pyproject.toml
libibackup/ibackup/: ibackup.pxd  libibackup.py
libibackup/tests/: test_libibackup.py
libideviceactivation/: pyproject.toml
libideviceactivation/tests/: test_libideviceactivation.py
libimobiledevice/: Pipfile  __init__.py  afc.py  device.py  libplist.py  pyproject.toml
libimobiledevice/late/: __init__.py  afc.py  device.py  libibackup.py  libplist.py  service.py
libimobiledevice/late/util/: __init__.py
libimobiledevice/test/libimobiledevice/: afc_test.py
libimobiledevice/test/libplist/: build_dictionary_test.py  loading_test.py
libirecovery/: build.py  pyproject.toml
libirecovery/libirecovery/: __init__.py  irecovery.c  irecovery.pxd  irecovery.pyx
libirecovery/tests/: test_libirecovery.py
libirestore/: pyproject.toml
libirestore/tests/: test_libirestore.py
libplist/: pyproject.toml
libplist/tests/: test_libplist.py
test/: afc_test.py
test/libimobiledevice/: devices_test.py
