[tool.poetry]
name = "libirecovery"
version = "0.1.0"
description = ""
authors = ["Rick Mark <rickmark@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Cython = "^0.29.27"

[build]
build = 'build.py'

[build-system]
requires = ["poetry-core>=1.0.0", "Cython"]
build-backend = "poetry.core.masonry.api"
